chore: revised data on blogs

--- a/app/blog/the-fascinating-technology-direction-of-japan/page.mdx
+++ b/app/blog/the-fascinating-technology-direction-of-japan/page.mdx
@@ -35,4 +35,4 @@ The cool thing is, these robots are now being deployed to **live** among people.
 
 It's most interesting to see that people of Japan still hangs on, trying to save their population decline in ways that leverage technology. I think that mindset is honestly inspiring.
 
-Just like Beth Jarosz told in Newsweek, "I don't think there are dangers from aging, only from failing to plan for an aging population." 
+> "I don't think there are dangers from aging, only from failing to plan for an aging population." — Beth Jarosz
