--- a/app/blog/what-i-learned-from-my-first-three-years-of-college/page.mdx
+++ b/app/blog/what-i-learned-from-my-first-three-years-of-college/page.mdx
@@ -21,11 +21,15 @@ To be honest, I don't know what to feel. It's like having that rollercoaster rid
 
 ## The Good
 
-School's pretty close to our home. Just nine railway stations away and 15 minutes of low-intensity cardio walk. Most of the time, I accompany or get accompanied by my fellow classmates when going home, so that those 'long' walks would never be boring. 
+School's pretty close to our home. Just nine railway stations away and 15 minutes of low-intensity cardio walk. Most of the time, I accompany or get accompanied by my fellow classmates when going home, so that those 'short' walks would never be boring. 
 
-On a different note, I really liked the perks that comes with the school email. Free Notion Education, Gemini AI Pro, Canva Education, and much more! It motivated me to use some apps that I don't regularly use because of these perks, and I never looked back.
+On a different note, I really liked the perks that comes with the school email. Free Notion Education, Gemini AI Pro, Canva Education, and much more! It motivated me to use some tech that I don't regularly use because of these perks, and I never looked back.
 
-But, the school projects are, I think, are the highlight of my journey. Those brainstorming moments, and the study sessions with my comrads, are just really memorable. Looking back, those sleepless nights that just felt hopeless because of time constraints and strict deadlines, I have no idea why I stressed so much over those problems, but all that effort really paid off. 
+But, the school projects, I think, are the highlight of my journey. Those brainstorming moments, and the study sessions with my comrads, are just really memorable. Looking back, those sleepless nights that just felt hopeless because of time constraints and strict deadlines, I have no idea why I stressed so much over those problems, but all that effort really paid off. 
+
+## The Bad
+
+It's **really** hot around the area. Due to the dense concrete stones and asphalt infrastructure of Intramuros, combined with traffic congestion with the Philippines' naturally hot, humid tropical climate. It's a deadly combo. 
 
 - **Generative Design**: AI algorithms can generate thousands of design variations based on constraints, helping designers explore ideas faster.
 - **User Experience Optimization**: AI analyzes user behavior to suggest improvements, enabling data-driven design decisions.
